<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/myapptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_io"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:layout_constraintVertical_bias="0.145">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="320dp"
                android:layout_height="137dp"
                android:layout_marginTop="-80sp"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/welcome"
                android:textSize="70sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enteremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/merriweather_sans"
                android:hint="@string/enter_email"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/enterpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/merriweather_sans"
                android:hint="@string/enter_password"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/merriweather_sans"
                android:text="@string/sign_in"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="270dp"
                android:layout_height="23dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:text="Don't have an account? Register" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/merriweather_sans"
                android:text="Register"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>